...
                            Color.Gray
                        }
                    )
                    .padding(15.dp)
                    .weight(1f)
            ){
                Text(text = "Title")
            }

            Box(
                contentAlignment = Alignment.Center,
                modifier = Modifier
                    .padding(10.dp)
...
                onSelect = {
                    onOrderChange(noteOrder.copy(OrderType.Ascending))
                }
            )
            Spacer(modifier = Modifier.width(8.dp))
            DefaultRadioButton(
                text = "Descending",
                selected = noteOrder.orderType is OrderType.Descending,
                onSelect = {
                    onOrderChange(noteOrder.copy(OrderType.Descending))
                }
            )
        }
...
